<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.otcframework</groupId>
	<artifactId>otcframework</artifactId>
	<version>2.7.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>OTC framework's parent project (JDK 11)</description>
	<url>http://www.otcframework.org</url>

	<licenses>
		<license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Franklin Joshua</name>
			<email>frank.a.otc@gmail.com</email>
			<organization>OTC Framework</organization>
			<organizationUrl>http://www.otcframework.org</organizationUrl>
		</developer>
	</developers>
	
	<scm>
		<connection>scm:git:git://github.com/frank-a-otc/otcframework.git</connection>
		<developerConnection>scm:git:ssh://github.com:frank-a-otc/otcframework.git</developerConnection>
		<url>https://github.com/frank-a-otc/otcframework</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

    <issueManagement>
        <system>Github Issue</system>
		<url>https://github.com/frank-a-otc/otcframework/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		
		<commons-configuration.version>1.8</commons-configuration.version>
		<commons-io.version>2.8.0</commons-io.version>
		<logback.version>1.3.14</logback.version>
		<slf4j.version>2.0.9</slf4j.version>
		<dateconverters.version>1.4.2</dateconverters.version>

		<jackson.version>2.15.0</jackson.version>
		<snakeyaml.version>2.2</snakeyaml.version>
		<msgpack.version>0.6.12</msgpack.version>
		<lombok.version>1.18.24</lombok.version>
		<javax.annotation.version>1.3.2</javax.annotation.version>
		<sonarqube.version>3.8.0.2131</sonarqube.version>
		
		<nexus-maven.version>1.6.8</nexus-maven.version>
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>${javax.annotation.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-configuration</groupId>
				<artifactId>commons-configuration</artifactId>
				<version>${commons-configuration.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>

			<dependency>
			    <groupId>com.fasterxml.jackson.dataformat</groupId>
			    <artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.otcframework</groupId>
				<artifactId>otc-common</artifactId>
			    <version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.otcframework</groupId>
				<artifactId>otc-compiler</artifactId>
			    <version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.otcframework</groupId>
				<artifactId>otc-executor</artifactId>
			    <version>${project.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.otcframework</groupId>
			    <artifactId>dateconverters</artifactId>
			    <version>${dateconverters.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven-gpg-plugin.version}</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>otc-common</module>
		<module>otc-compiler</module>
		<module>otc-executor</module>
	</modules>

</project>
 